--- a/data.ipynb
+++ b/data.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "535e0d31",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Path to dataset files: /home/kygiet/.cache/kagglehub/datasets/firedmosquito831/student-academic-performance-simulation-4000/versions/2\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -17,120 +25,27 @@
     "\n",
     "pd.set_option('display.max_columns', 200)\n",
     "# Download latest version\n",
-    "# path = kagglehub.dataset_download(\"firedmosquito831/student-academic-performance-simulation-4000\")\n",
+    "path = kagglehub.dataset_download(\"firedmosquito831/student-academic-performance-simulation-4000\")\n",
     "\n",
-    "# print(\"Path to dataset files:\", path)\n",
+    "print(\"Path to dataset files:\", path)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "bb5b5db3",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Gender</th>\n",
-       "      <th>HoursStudied/Week</th>\n",
-       "      <th>Tutoring</th>\n",
-       "      <th>Region</th>\n",
-       "      <th>Attendance(%)</th>\n",
-       "      <th>Parent Education</th>\n",
-       "      <th>Exam_Score</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Male</td>\n",
-       "      <td>5.5</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Urban</td>\n",
-       "      <td>72.7</td>\n",
-       "      <td>Tertiary</td>\n",
-       "      <td>43.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Female</td>\n",
-       "      <td>6.8</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Urban</td>\n",
-       "      <td>62.0</td>\n",
-       "      <td>Primary</td>\n",
-       "      <td>51.7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Female</td>\n",
-       "      <td>9.7</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Rural</td>\n",
-       "      <td>95.0</td>\n",
-       "      <td>Secondary</td>\n",
-       "      <td>70.1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Male</td>\n",
-       "      <td>13.3</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Rural</td>\n",
-       "      <td>52.9</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>79.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Female</td>\n",
-       "      <td>8.9</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Urban</td>\n",
-       "      <td>50.8</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>52.2</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "   Gender  HoursStudied/Week Tutoring Region  Attendance(%) Parent Education  \\\n",
-       "0    Male                5.5       No  Urban           72.7         Tertiary   \n",
-       "1  Female                6.8       No  Urban           62.0          Primary   \n",
-       "2  Female                9.7       No  Rural           95.0        Secondary   \n",
-       "3    Male               13.3      Yes  Rural           52.9              NaN   \n",
-       "4  Female                8.9       No  Urban           50.8              NaN   \n",
-       "\n",
-       "   Exam_Score  \n",
-       "0        43.5  \n",
-       "1        51.7  \n",
-       "2        70.1  \n",
-       "3        79.5  \n",
-       "4        52.2  "
+       "Index(['Gender', 'HoursStudied/Week', 'Tutoring', 'Region', 'Attendance(%)',\n",
+       "       'Parent Education', 'Exam_Score'],\n",
+       "      dtype='object')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +53,35 @@
    "source": [
     "df = pd.read_csv(path + '/student_performance.csv')\n",
     "df.shape\n",
-    "df.head(5)"
+    "df.head()\n",
+    "df.columns\n",
+    "# pd[date] = pd.to_datetime(df['date'], format='%Y-%m-%d %H:%M:%S')\n",
+    "# df = df[['']].copy()\n",
+    "# df.drop(columns=['Unnamed: 0'], inplace=True)\n",
+    "# df.describe()\n",
+    "#df = df.rename(columns={'Unnamed: 0': 'id'}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "d0a5f025",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(0)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isna().sum()\n",
+    "df.duplicated().sum()"
    ]
   }
  ],
